--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
-    id 'com.android.application' version '7.1.0' apply false
+    id 'com.android.application' version '8.10.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id("com.vanniktech.maven.publish") version "0.33.0" apply false
 }
 
 tasks.register('clean', Delete) {
